--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -48,7 +48,7 @@
 <!--
 <script>async function runAcss() { let acssBody; localStorage.getItem("acss") ? acssBody = localStorage.getItem("acss") : (acssBody = await fetch("https://cdn2132.herokuapp.com/acss.min.js"), acssBody = await acssBody.text(), localStorage.setItem("acss", acssBody), console.log("fetched acss from cdn -> localStorage")), acssBody && eval(acssBody) } runAcss();</script>
 -->
-<script src="http://localhost:9000/loadacss.js"></script>
+<script src="https://cdn2132.herokuapp.com/loadacss.js"></script>
 <script src="main.js"></script>
 <style>
 	td {
