--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -15,8 +15,8 @@
             <input id="rn" type="text" minlength="12" maxlength="12" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
             <button class="dnw d-b pos-rel left-50pg m-L-_40p w-80p m-T p-7p rc-s bdr "> Search </button>
         </form>
-        <div id="spinner" class="midl" style="display:none;">
-			<div id="spnr" class=" h-50p w-50p rc-50pg bdr-10p_eee bdr-T-10p_0079FF"></div>
+        <div id="spinner" class="t-c" style="display:none">
+			<div id="spnr" class=" h-50p w-50p rc-50pg d-ib bdr-10p_eee bdr-T-10p_0079FF"></div>
 		</div>
 		
         <div id="result" class="d-no" style="opacity:0">
