--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -5,9 +5,11 @@
     <title> B.Sc. I Year Result </title>
     <link rel="stylesheet" href="styles.css" />
 </head>
-
+<style>
+	.mbd { opacity : 0; transition : 0.5s }
+</style>
 <body class="m-n">
-    <div class="mdb pc(w-500p,left-50pg,pos-rel,m-L-_250p)">
+    <div class="mbd opct-100pg pc(w-500p,left-50pg,pos-rel,m-L-_250p)">
 
         <h1 class="p t-c m rc dnw f-xl"> B.Sc I year Result ( 2021 ) </h1>
         <form class="vp p-l bdr rc m bg-eee t-c" onsubmit=" getResult(); return false;">
