--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -8,7 +8,7 @@
 <style>
 	.mbd { opacity : 0; transition : 0.5s }
 </style>
-<body class="m-n">
+<body class="m-n ff-calibri">
     <div class="mbd opct-100pg pc(w-500p,left-50pg,pos-rel,m-L-_250p)">
 
         <h1 class="p t-c m rc dnw f-xl"> B.Sc I year Result ( 2021 ) </h1>
