Error message fixed !

--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -23,7 +23,7 @@
 		
         <div id="result" class="d-no" style="opacity:0">
 			<div class="details bg-fff p t-c">
-				<table border="1px" class="t-c rc-s d-ib">
+				<table border="2px" class="t-c rc-s d-ib">
 					<th colspan="2"> Personal Details </th>
 					<tr><td>Name </td><td> Abhay Bisht </td></tr>
 					<tr><td>Roll No. </td><td> 200211070003 </td></tr>
@@ -41,8 +41,8 @@
 				</table>
 			</div>
         </div>
-        <div>
-        <div id="err" style="display:none" class="d-no bg-FF8178 t-c p m bdr rc-s">
+		
+        <div id="err" style="display:none" class="fw-700 d-no bg-FF8178 t-c p m bdr rc-s">
         	Roll No. does not exists...
        </div>
         </div>
