--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -14,7 +14,7 @@
         <h1 class="p t-c m rc dnw f-xl"> B.Sc I YEAR Result <span class="d-ib m-L-s f">by Abhay</span> </h1>
         <form class="vp p-l bdr rc m bg-eee t-c" onsubmit=" getResult(); return false;">
             <label for="rn"> Roll No. </label>
-            <input value="200211070003" id="rn" type="text" minlength="12" maxlength="12" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
+            <input placeholder="eg. 2002110700.." id="rn" type="text" minlength="12" maxlength="12" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
             <button onclick="pressed(this)" class="dnw d-b pos-rel left-50pg m-L-_40p w-80p m-T p-7p rc-s bdr "> Search </button>
         </form>
         <div id="spinner" class="t-c" style="display:none">
