--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -14,33 +14,14 @@
         <h1 class="p t-c m rc dnw f-xl"> B.Sc I YEAR Result <span class="d-ib m-L-s f">by Abhay</span> </h1>
         <form class="vp p-l bdr rc m bg-eee t-c" onsubmit=" getResult(); return false;">
             <label for="rn"> Roll No. </label>
-            <input placeholder="eg. 2002110700.." id="rn" type="text" minlength="12" maxlength="12" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
+            <input value="200211070054" id="rn" type="text" minlength="12" maxlength="12" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
             <button onclick="pressed(this)" class="dnw d-b pos-rel left-50pg m-L-_40p w-80p m-T p-7p rc-s bdr "> Search </button>
         </form>
         <div id="spinner" class="t-c" style="display:none">
 			<div id="spnr" class=" h-50p w-50p rc-50pg d-ib bdr-10p_eee bdr-T-10p_0079FF"></div>
 		</div>
 		
-        <div id="result" class="d-no" style="opacity:0">
-			<div class="details bg-fff p t-c">
-				<table border="2px" class="t-c rc-s d-ib">
-					<th colspan="2"> Personal Details </th>
-					<tr><td>Name </td><td> Abhay Bisht </td></tr>
-					<tr><td>Roll No. </td><td> 200211070003 </td></tr>
-					<tr><td>Result </td><td class="dnw"> PASS </td></tr>
-					<tr><td>Marks </td><td> 378 / 600 </td></tr>
-				</table>
-			</div>
-			<div class="marks bg-fff p t-c">
-				<table border="1px">
-					<th colspan="6" class="dnw rc-s">MARKS</th>
-					<tr><th>Sub</th><th>I</th><th>II</th><th>III</th><th>Prac.</th><th>Total</th></tr>
-					<tr><td> P </td><td>50</td><td>50</td><td>50</td><td>50</td><td>50</td></tr>
-					<tr><td>C </td><td>50</td><td>50</td><td>50</td><td>50</td><td>50</td></tr>
-					<tr><td>M </td><td>50</td><td>50</td><td>50</td><td>50</td><td>50</td></tr>
-				</table>
-			</div>
-        </div>
+        <div id="result" class="d-no" style="opacity:0"></div>
 		
         <div id="err" style="display:none" class="fw-700 d-no bg-FF8178 t-c p m bdr rc-s">
         	Roll No. does not exists...
