--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -15,7 +15,7 @@
         <form class="vp p-l bdr rc m bg-eee t-c" onsubmit=" getResult(); return false;">
             <label for="rn"> Roll No. </label>
             <input value="200211070054" id="rn" type="text" minlength="12" maxlength="12" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
-            <button onclick="pressed(this)" class="dnw d-b pos-rel left-50pg m-L-_40p w-80p m-T p-7p rc-s bdr "> Search </button>
+            <button onclick="pressed(this, true)" class="dnw d-b pos-rel left-50pg m-L-_40p w-80p m-T p-7p rc-s bdr "> Search </button>
         </form>
         <div id="spinner" class="t-c" style="display:none">
 			<div id="spnr" class=" h-50p w-50p rc-50pg d-ib bdr-10p_eee bdr-T-10p_0079FF"></div>
@@ -28,9 +28,6 @@
        </div>
         </div>
 </body>
-<!--
-<script src="https://cdn2132.herokuapp.com/loadacss.js"></script>
--->
 <script>async function runAcss() { let acssBody; localStorage.getItem("acss") ? acssBody = localStorage.getItem("acss") : (acssBody = await fetch("https://cdn2132.herokuapp.com/acss.min.js"), acssBody = await acssBody.text(), localStorage.setItem("acss", acssBody), console.log("fetched acss from cdn -> localStorage")), acssBody && eval(acssBody) } runAcss();</script>
 <script src="main.js"></script>
 <script src="anime.js"></script>
@@ -46,6 +43,10 @@
 		display : inline-block;
 		border-radius : 5px;
 		text-align : center;
+	}
+	
+	button {
+		box-shadow : 0px 4px 1px #666;
 	}
 </style>
 </html>
