--- a/src/static/public/styles.css
+++ b/src/static/public/styles.css
@@ -1,3 +1,22 @@
+
+
+	td {
+		padding: 5px 10px;
+	}
+	table th:first-child {
+		border-radius : 5px;
+		padding : 10px
+	}
+	table {
+		display : inline-block;
+		border-radius : 5px;
+		text-align : center;
+	}
+	
+	button {
+		box-shadow : 0px 4px 1px #666;
+	}
+
 @keyframes rot {
 	from { transform : rotate(0deg);}
 	to { transform : rotate(360deg);}
@@ -6,3 +25,4 @@
 #spnr {
 	animation : rot 1s linear 0s infinite normal;
 }
+
