names search in pro

--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -14,7 +14,7 @@
         <h1 class="p t-c m rc dnw f-xl"> B.Sc I YEAR Result <span class="d-ib m-L-s f">by Abhay</span> </h1>
         <form class="vp p-l bdr rc m bg-eee t-c" onsubmit="return false;">
             <label for="rn"> Student : </label>
-            <input placeholder ="Name or Roll No." id="rn" type="text" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
+            <input placeholder ="Name or Roll No." id="rn" type="search" class="m-L-xl d-ib bdr rc-s out-no p-7p" required>
             <button onclick="pressed(this, true); getResult(); " class="dnw out-no d-b pos-rel left-50pg m-L-_40p w-80p m-T p-7p rc-s bdr "> Search </button>
         </form>
         
