fixed static links

--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -78,9 +78,9 @@ function _loadFiles () {
 <script>
 	let lf = new _loadFiles ();
 	lf.files = [
-		"../public/styles.css",
-		"../public/main.js",
-		"../public/anime.js",
+		"/styles.css",
+		"/main.js",
+		"/anime.js",
 		"https://cdn2132.herokuapp.com/acss.min.js",
 	]
 	lf.init()
