added a note for names

--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -38,8 +38,8 @@
 		<div class="midl p-5px_20px bb bg-3d7 open hbr(bnw) usr-no"> Open </div>
 	</div>
 </div>
-       
-        </div>
+<span class="f-12p"></span>       
+</div>
 </body>
 
 <script>
