--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -5,9 +5,6 @@
     <title> B.Sc. I Year Result </title>
     <link rel="stylesheet" href="styles.css" />
 </head>
-<style>
-	.mbd { opacity : 0; transition : 0.5s }
-</style>
 <body class="m-n ff-calibri">
     <div class="mbd opct-1 pc(w-500p,left-50pg,pos-rel,m-L-_250p)">
 
@@ -39,6 +36,11 @@
 	</div>
 </div>
 <span class="f-12p"></span>       
+</div>
+
+<style>@keyframes blink { from { opacity : 1; } to { opacity : 0.1; }}</style>
+<div class="d-no" style="position:fixed; background: #fff; box-sizing : border-box;height:100vh; width:100%; top: 0; left:0" id="splashScreen">
+<img src="logo.png" style="animation: blink 1s linear 0s infinite alternate; height:120px; width: 120px; display: inline-block; position : absolute; left : calc(50% - 60px); top : calc(50vh - 100px);">
 </div>
 </body>
 
