--- a/src/static/views/index.htm
+++ b/src/static/views/index.htm
@@ -40,7 +40,7 @@
 
 <style>@keyframes blink { from { opacity : 1; } to { opacity : 0.1; }}</style>
 <div class="d-no" style="position:fixed; background: #fff; box-sizing : border-box;height:100vh; width:100%; top: 0; left:0" id="splashScreen">
-<img src="logo.png" style="animation: blink 1s linear 0s infinite alternate; height:120px; width: 120px; display: inline-block; position : absolute; left : calc(50% - 60px); top : calc(50vh - 100px);">
+<img src="/logo.png" style="animation: blink 1s linear 0s infinite alternate; height:120px; width: 120px; display: inline-block; position : absolute; left : calc(50% - 60px); top : calc(50vh - 100px);">
 </div>
 </body>
 
